Chinese translation with hashes

--- a/i18n/zh/components/common/cbd-article.json
+++ b/i18n/zh/components/common/cbd-article.json
@@ -1,4 +1,13 @@
 {
   "noInformation": "本部分暂无相关信息。",
-  "loading": "正在加载本部分内容"
+  "loading": "正在加载本部分内容",
+  "#meta": {
+    "hashedOn": "2024-07-04T14:56:10.448Z",
+    "algorithm": "md5",
+    "branch": "2024.26.0",
+    "hashes": {
+      "noInformation": "10a9ef005da5b9ab7d7a0a003225ae16",
+      "loading": "a2b842ed3308f472a23e37510c0a7f86"
+    }
+  }
 }
