--- a/i18n/zh/components/pages/national-targets/my-country/overview.json
+++ b/i18n/zh/components/pages/national-targets/my-country/overview.json
@@ -1,6 +1,7 @@
 {
   "validationErrorsTitle": "验证错误",
   "validationErrorsMessage": "您的某些记录中仍然缺少必填信息，请确保所有标红的记录都已填写。",
+  "validationSuccessMessage": "验证成功",
   "close": "关闭",
   "successfulMessage": "您关于发布贵国国家具体目标和对应关系的请求已经收到。",
   "successMessageNau": "您的发布请求将发送给贵国有发布权的国家联络点。",
@@ -26,5 +27,86 @@
   "partII": "第二部分",
   "welcome": "欢迎来到贵国的国家具体目标提交部分，请选择要继续的选项。",
   "spinnerMessage": "请稍候，我们正在处理您的请求。",
-  "refresh": "刷新"
+  "refresh": "刷新",
+  "submitNewTarget": "提交新具体目标",
+  "globalTargets": "全球具体目标",
+  "tourTitle": "概述",
+  "partISubmitTitle": "提交新具体目标",
+  "partIValidateTitle": "验证第一部分",
+  "refreshTitle": "刷新",
+  "partIStatusTitle": "记录状态",
+  "#meta": {
+    "hashedOn": "2024-07-04T14:56:10.392Z",
+    "algorithm": "md5",
+    "branch": "2024.26.0",
+    "hashes": {
+      "validationErrorsTitle": "13148717f8faa9037f37d28971dfc219",
+      "validationErrorsMessage": "9683251776ae72cb360ef386ef9bbe66",
+      "validationSuccessMessage": "b2a97ba1150b313c0a5673334571a272",
+      "close": "d3d2e617335f08df83599665eef8a418",
+      "successfulMessage": "2c56b6243581dd9c19a0400e1a12b759",
+      "successMessageNau": "9987c062560fefb15804fa85dfddb8b0",
+      "successMessagePA": "85f984bcf1c7c9167cdfa144177d43f4",
+      "nbsapMessage": "526da1ccc394dd83cd9056234b0d1df4",
+      "successTitle": "505a83f220c02df2f85c3810cd9ceb38",
+      "yes": "93cba07454f06a4a960172bbd6e2a435",
+      "no": "bafd7322c6e97d25b6299b5d6fe8920b",
+      "confirmationMessage": "913915320f254dc81f95542f761ae407",
+      "confirmationTitle": "f4d1ea475eaa85102e2b4e6d95da84bd",
+      "nationalTarget": "8319df976754d6ac93687e0213475253",
+      "nationalMapping": "812366b7f93d44ee7b35dedd087f8aa1",
+      "proceedAnyways": "84955aa928597695ef5907726a1c4f1f",
+      "missingNationalTargets": "aeea5d9599c17d6938e825a68135bc1e",
+      "missingNationalMappings": "5c0a0441906cd28b3846b1ee6f79c946",
+      "validatePartI": "e242b069e8fd1189794ebae156a3eca9",
+      "validatePartII": "286ba56cc51b7c818c1ba70bb7cbfc55",
+      "validatePartIAndPartII": "a1502047856a4a4cbdac69a8fcd173d1",
+      "publish": "5a47728bcf85e34909240b7d30844306",
+      "submitMapping": "8810071037e8edc5a5f3a27e530ee24d",
+      "submitTargets": "aa6461989a7e3650b0593b172c59e13c",
+      "partI": "65e50d9183cfdb664c51854495f4a3b5",
+      "partII": "fdabad7e7ea8afe488d3fd27bb854668",
+      "welcome": "3348b581f6ef12382ab70bfffc7d35cc",
+      "spinnerMessage": "511464d5806b2e2503e85842851aeb1b",
+      "refresh": "63a6a88c066880c5ac42394a22803ca6",
+      "goToPartI": "e55b4d7505a6094d00e4432cbda99ced",
+      "submitNewTarget": "bb7870b2521f859d7a79847384d6670b",
+      "globalTargets": "5ebd1fa1da0221ab920721bf9e90c1ac",
+      "tourTitle": "3b878279a04dc47d60932cb294d96259",
+      "tourWelcomeTitle": "4474c73292afcfc113953917c62e5a1b",
+      "tourWelcomeContent": "998ecc761fb111b2303e667fd82040ba",
+      "partITitle": "0f6b6de993799fc61209bf7424ee0492",
+      "partIContent": "a9a4582a43e670133856d3ee83b3f360",
+      "partICountsTitle": "b65df30bc08dd590eb9bc96c5099686b",
+      "partICountsContent": "7ecb6692f46a5ec28ac2b16be1a9b841",
+      "partIGoToTitle": "08a236a85a4888b0a77772089b0f47cb",
+      "partIGoToContent": "1c9ff3e100137acd9fd73100c6ef51cf",
+      "partISubmitTitle": "bb7870b2521f859d7a79847384d6670b",
+      "partISubmitContent": "5c1eec3956987a986e6d02a1c4d90560",
+      "partIValidateTitle": "e242b069e8fd1189794ebae156a3eca9",
+      "partIValidateContent": "a821f313050c13a454abb4aaeb8c0831",
+      "partIITitle": "46e3491967e08beb73672a25e65bcf93",
+      "partIIContent": "7b27eaa666d64b7a48dda966cc3c7524",
+      "partIICountsTitle": "b65df30bc08dd590eb9bc96c5099686b",
+      "partIICountsContent": "3ba85f56a4df6e19ddb136c70dda7348",
+      "partIIGoToTitle": "9dc3c4659973aac1afab9ab8b6abefd9",
+      "partIIGoToContent": "97a29bdfbc49fb1ddeb4b2c25be26af8",
+      "partIIValidateTitle": "8d2a321b27eb85ff5988a3f67a9dc99f",
+      "partIIValidateContent": "891907523c1012202f2aa755b744a845",
+      "publishTitle": "7a94f0aff14678d898820990a42f8203",
+      "publishContent": "d45314cbe709b3516bddfa846a026be0",
+      "validateTitle": "3de2e343d3e95d42059b1c6a38d70127",
+      "validateContent": "dc05c6a5b39a91dc8970e37c8d20a915",
+      "refreshTitle": "63a6a88c066880c5ac42394a22803ca6",
+      "refreshContent": "d69c03d53eed4c8486e39b70027ca37a",
+      "partICountTitle": "15e43c6cedfc3105e30b9f765b18fabb",
+      "partICountContent": "e28496cbebc1247d70d0f1e28df8ff25",
+      "partILinkedGbfTitle": "5cae51e7fe379fc873fc7829820445b7",
+      "partILinkedGbfContent": "f987e14ea44a9896628f2e5a6e54f109",
+      "partIStatusTitle": "d24f880a00336ee9f921fbedeafe4734",
+      "partIStatusContent": "bbf22543dd9affe3e5d2ae58128613ed",
+      "partIICountTitle": "ea89f5fbe8635c4cc7d4471d6581ed9d",
+      "partIICountContent": "92247ed959bb1979004abb684a1dcca2"
+    }
+  }
 }
