--- a/i18n/zh/layouts/default.json
+++ b/i18n/zh/layouts/default.json
@@ -1,4 +1,13 @@
 {
   "title": "在线报表工具",
-  "description": "在线报告工具让各国能够更新国家生物多样性战略和行动计划，包括缔约方大会第十六次会议之前的国家具体目标"
+  "description": "在线报告工具让各国能够更新国家生物多样性战略和行动计划，包括缔约方大会第十六次会议之前的国家具体目标",
+  "#meta": {
+    "hashedOn": "2024-07-04T14:56:10.467Z",
+    "algorithm": "md5",
+    "branch": "2024.26.0",
+    "hashes": {
+      "title": "ef8f1ae366a15fa1b70fd7c9916ba0d4",
+      "description": "d43f8035151abc8124b640f5b7da42bb"
+    }
+  }
 }
