--- a/i18n/zh/components/common/user-profile-info.json
+++ b/i18n/zh/components/common/user-profile-info.json
@@ -13,5 +13,27 @@
   "roles": "角色",
   "nauHelp": "国家授权用户（NAU）可以创建国家记录草稿，并将其提交给发布机构进行验证和发布。",
   "updateProfile": "更新概况",
-  "updatePassword": "更新密码"
+  "updatePassword": "更新密码",
+  "#meta": {
+    "hashedOn": "2024-07-04T14:56:10.449Z",
+    "algorithm": "md5",
+    "branch": "2024.26.0",
+    "hashes": {
+      "title": "cbc4b930801d47bcc491c1192b9c257b",
+      "welcome": "83218ac34c1834c26781fe4bde918ee4",
+      "publishingAuthority": "c0a8567ad0cdf948c0974894095308f8",
+      "nationalFocalPoint": "563c49902b79409543b5035cea5944e2",
+      "nationalAuthorizedUser": "1babd576c2d6bdd12c06c0c3e75ac915",
+      "registeredUser": "f882809d34599d7dff5635d593057776",
+      "admin": "7b7bc2512ee1fedcd76bdc68926d4f7b",
+      "name": "49ee3087348e8d44e1feda1917443987",
+      "primaryEmail": "d5fc71a7f48a5201ede894f7254a40ff",
+      "countryAffiliation": "721c35f425a0e18e43abc29b9de57ec6",
+      "none": "334c4a4c42fdb79d7ebc3e73b517e6f8",
+      "roles": "87c31a8841364124e0638e3284621e10",
+      "nauHelp": "2549beb31ad4949ea65bfab6b152340d",
+      "updateProfile": "54d2e870aca5e99bf69f0ee1d494c3b3",
+      "updatePassword": "7e347ed93c2a1d51aa8bf44ca3f517f0"
+    }
+  }
 }
