--- a/i18n/zh/components/pages/nr7/my-country/edit/nr7-edit-overview.json
+++ b/i18n/zh/components/pages/nr7/my-country/edit/nr7-edit-overview.json
@@ -1,1 +1,48 @@
-{}
+{
+  "publishedState": "已发布",
+  "draftState": "草案",
+  "lockedState": "草稿已上锁",
+  "passedValidation": "验证成功",
+  "hasErrors": "验证失败",
+  "validating": "正在验证",
+  "validationErrorsTitle": "验证错误",
+  "close": "关闭",
+  "successMessageNau": "您的发布请求将发送给贵国有发布权的国家联络点。",
+  "successMessagePA": "鉴于记录数量，全部发布需要几分钟时间。",
+  "successTitle": "成功",
+  "yes": "是",
+  "no": "否",
+  "confirmationTitle": "确认",
+  "spinnerMessage": "请稍候，我们正在处理您的请求。",
+  "refresh": "刷新",
+  "publish": "发布",
+  "#meta": {
+    "hashedOn": "2024-07-04T14:56:10.43Z",
+    "algorithm": "md5",
+    "branch": "2024.26.0",
+    "hashes": {
+      "welcome": "4a214db9505651cdb374c8a7b9972a8f",
+      "publishedState": "9b9d8a976b42e0bd66381797644943d5",
+      "draftState": "f03ab16cd58372c77ba45a3d9a5a1cb9",
+      "lockedState": "39485d47a2524e88a917f3d8bdd7196d",
+      "passedValidation": "b2a97ba1150b313c0a5673334571a272",
+      "hasErrors": "7ce566811655aedfaf524bde4e32f575",
+      "validating": "c423b2af9f3f373c6576a8512645da9b",
+      "validationErrorsTitle": "bad0d8a56996a16e9cdac5335080e167",
+      "validationErrorsMessage": "7bca19bdc0480a7411f440cd7512cc33",
+      "close": "d3d2e617335f08df83599665eef8a418",
+      "successfulMessage": "4d37d02c7eca17fd2a99c9fc0f6d057f",
+      "successMessageNau": "9987c062560fefb15804fa85dfddb8b0",
+      "successMessagePA": "85f984bcf1c7c9167cdfa144177d43f4",
+      "successTitle": "505a83f220c02df2f85c3810cd9ceb38",
+      "yes": "93cba07454f06a4a960172bbd6e2a435",
+      "no": "bafd7322c6e97d25b6299b5d6fe8920b",
+      "confirmationMessage": "ffb54f8147a5de5686300a058029fefe",
+      "confirmationTitle": "f4d1ea475eaa85102e2b4e6d95da84bd",
+      "spinnerMessage": "511464d5806b2e2503e85842851aeb1b",
+      "refresh": "63a6a88c066880c5ac42394a22803ca6",
+      "validate": "ad3d06d03d94223fa652babc913de686",
+      "publish": "110a4b01beabd53b661a47d4b44bd7a8"
+    }
+  }
+}
