Analyzer for NT

--- a/i18n/en/components/layout/AppSidebar.json
+++ b/i18n/en/components/layout/AppSidebar.json
@@ -7,6 +7,7 @@
     "nationalReports": "National Reports",
     "menuNationalTargets": "National Targets",
     "menuAllTargets": "All National Targets",
+    "menuAnalyzeTargets": "Analyze national targets",
     "menuMyCountryTargets": "My Country Targets",
     "menuMyCountryTargetsPart1": "Part I",
     "menuMyCountryTargetsPart2": "Part II",
