Fix french translation for publish

--- a/i18n/fr/components/pages/national-targets/my-country/overview.json
+++ b/i18n/fr/components/pages/national-targets/my-country/overview.json
@@ -20,7 +20,7 @@
   "validatePartI": "Valider la partie I",
   "validatePartII": "Valider la partie II",
   "validatePartIAndPartII": "Valider la partie 1 et 2",
-  "publish": "Valider la partie 1 et 2",
+  "publish": "Publier la partie 1 et 2",
   "submitMapping": "Soumettre les informations de cartographie de vos cibles et objectifs",
   "submitTargets": "Soumettre vos objectifs nationaux ici",
   "partI": "Partie I",
