Add link to analyzer

--- a/i18n/en/components/pages/national-targets/national-targets-list.json
+++ b/i18n/en/components/pages/national-targets/national-targets-list.json
@@ -1,3 +1,5 @@
 {
-    "noRecords":"There are no records to display!"
+    "noRecords":"There are no records to display!",
+    "analyzer": "Analyzer",
+    "submitNew" : "Submit new target"
 }
