--- a/i18n/en/components/layout/AppHeaderDropdownAccnt.json
+++ b/i18n/en/components/layout/AppHeaderDropdownAccnt.json
@@ -1,4 +1,6 @@
 {
     "settings":"Settings",
-    "signIn":"Sign in"
+    "signIn":"Sign in",
+    "emailAlerts": "Email Alerts",
+    "profile": "Profile"
 }
