Change text country to party

--- a/i18n/en/pages/dashboard.json
+++ b/i18n/en/pages/dashboard.json
@@ -7,14 +7,14 @@
     "toBegin" : "to begin",
     "6Nr":   "6th National Reports",
     "by" : "By",
-    "countries":   "Countries",
+    "countries":   "Parties",
     "7Nr" : "7th National Reports",
     "nationalTargets":   "National targets",
     "nbsapsFull" : "National Biodiversity Strategies and Action Plans (NBSAPs)",
     "nbsaps" : "NBSAPs",
     "latestRecords":   "Latest records",
     "title":"Title",
-    "country" : "Country",
+    "country" : "Party",
     "type":   "Type",
     "publishedOn" : "Published on",
     
