--- a/i18n/en/pages/national-targets/analyzer.json
+++ b/i18n/en/pages/national-targets/analyzer.json
@@ -1,3 +1,17 @@
 {
-    "nationalTargetsAnalyzer" : "National targets analyzer"
+    "nationalTargetsAnalyzer" : "National targets analyzer",
+    "getShareLink":"Get share link",
+    "close" : "Close",
+    "shareMessage":"Check individual section to share or click on Get share link to share all",
+    "shareAnalyzerHeader" : "Share national report analyzer",
+    "share" : "Share",
+    "general-count" : "General count",
+    "target-progress-regions" : "Progress in target setting (by regions)",
+    "target-progress-parties" : "Progress in target setting (by parties)",
+    "monitoring-progress" : "Progress in monitoring",
+    "relevance-progress"  : "Progress in ambition/relevance",
+    "section-c-progress"  : "Progress in Section C", 
+    "non-state-progress"  : "Non-state actor",
+    "party-count" : "Party count",
+    "ortTip" : "SCBD Online Reporting Tool"
 }
