--- a/i18n/en/pages/dashboard.json
+++ b/i18n/en/pages/dashboard.json
@@ -10,7 +10,7 @@
     "countries":   "Parties",
     "7Nr" : "7th National Reports",
     "nationalTargets":   "National targets",
-    "nbsapsFull" : "National Biodiversity Strategies and Action Plans (NBSAPs)",
+    "nbsapsFull" : "National Biodiversity Strategies and Action Plans (NBSAPs) aligned with KMGBF",
     "nbsaps" : "NBSAPs",
     "latestRecords":   "Latest records",
     "title":"Title",
