--- a/i18n/en/components/pages/nbsaps/my-country/edit-nbsap.json
+++ b/i18n/en/components/pages/nbsaps/my-country/edit-nbsap.json
@@ -4,7 +4,7 @@
     "nbsapTitle":"National Biodiversity Strategies and Action Plans (NBSAP)",
     "governmentAndLanguages":"Government and Language(s)",
     "submissionLanguage":"Please select in which language(s) you wish to submit this record",   
-    "isGbfAligned": "Is the NBSAP aligned with the KMGBF?", 
+    "isGbfAligned": "Is the submission in alignment with the Kunming-Montreal Global Biodiversity Framework?", 
     "titleInfo":"Provide a meaningful title for NBSAP",
     "title":"Enter NBSAP title",
     "summary":"Summary",   
