Temp update for nr7 demo

--- a/i18n/en/components/layout/AppSidebar.json
+++ b/i18n/en/components/layout/AppSidebar.json
@@ -21,6 +21,6 @@
     "sectionIV": "Section IV",
     "sectionV": "Section V",
     "sectionVI": "Section VI",
-    "annex": "Annex",
+    "annex": "Other information",
     "indicatorData" : "Indicator Data"
 }
