update components/layout files

--- a/i18n/en/components/layout/AppHeader.json
+++ b/i18n/en/components/layout/AppHeader.json
@@ -4,5 +4,7 @@
     "menuNationalTargets": "National Targets",
     "menu7Nr": "7th National Report",
     "menuSearch": "Search",
-    "menuHelp": "Help"
+    "menuHelp": "Help",
+    "nationalUsers": "National users",
+    "chm": "CHM"
 }
