update print-footer files

--- a/i18n/en/components/common/print-footer.json
+++ b/i18n/en/components/common/print-footer.json
@@ -1,1 +1,10 @@
-{}
+{
+    "furtherInformation": "Further Information",
+    "questionsAboutOrt": "Questions about the Online Reporting Tool may be directed to the Secretariat of the Convention on Biological Diversity.",
+    "scbd": "Secretariat of the Convention on Biological Diversity",
+    "saintJacques": "413 rue Saint-Jacques, suite 800",
+    "montreal": "Montreal, Québec, H2Y 1N9",
+    "canada": "Canada",
+    "fax": "Fax: +1 514 288-6588",
+    "email": "Email:"
+}
