--- a/i18n/en/components/controls/edit/link/link-editor.json
+++ b/i18n/en/components/controls/edit/link/link-editor.json
@@ -1,1 +1,14 @@
-{}
+{
+    "editingLink": "Editing link",
+    "pleaseProvideWebsite": "Please provide the URL of the website (e.g.",
+    "nameOfTheWebsite": "and the name of the website (e.g. 'The Convention on Biological Diversity').",
+    "url": "Url",
+    "protocolIsRequired": "Protocol is required",
+    "pleaseProvideValidUrl": "Please provide valid URL",
+    "name": "Name",
+    "scbdWebsite": "example:SCBD website",
+    "language": "Language",
+    "pleaseSelectLanguage": "Please select Language",
+    "cancel": "Cancel",
+    "save": "Save"
+}
