--- a/i18n/en/components/controls/email-alerts/subscribe-email-alerts.json
+++ b/i18n/en/components/controls/email-alerts/subscribe-email-alerts.json
@@ -10,6 +10,7 @@
     "confirmDeleteTitleMessage":"Are you sure you want to delete this email alert?",
     "confirmDeleteProcessing":"Deleting email alert",
     "yes":"Yes",
-    "no":"No"
+    "no":"No",
+    "emailAlert": "Email alert"
 
 }
