update footer component

--- a/i18n/en/components/layout/cbd/footer.json
+++ b/i18n/en/components/layout/cbd/footer.json
@@ -1,1 +1,31 @@
-{}
+{
+    "followUs": "Follow us",
+    "quickLinks": "quick links",
+    "absch": "Access and Benefit-Sharing Clearing-House",
+    "bch": "Biosafety Clearing-House",
+    "chm": "Clearing-House Mechanism",
+    "contributions": "Contributions",
+    "countryProfiles": "Country Profiles",
+    "meetingsAndEvents": "Meetings and Events",
+    "nbsaps": "National Biodiversity Strategies and Action Plans (NBSAPs)",
+    "nfp": "National Focal Points",
+    "nationalReports": "National Reports",
+    "newsHeadlines": "News Headlines",
+    "notifications": "Notifications",
+    "parties": "Parties",
+    "publications": "Publications",
+    "topics": "Topics",
+    "stakeholders": "Business, Women, Youth and other Stakeholders",
+    "climateChange": "Climate Change",
+    "povertyReduction": "Poverty Reduction",
+    "food": "Food",
+    "water": "Water",
+    "indigenousPeoples": "Indigenous Peoples and Local Communities",
+    "information": "Information",
+    "contactUs": "Contact us",
+    "termsOfUse": "Terms of Use",
+    "privacyPolicy": "Privacy Policy",
+    "credits": "Credits",
+    "CBDSecretariat": "CBD Secretariat",
+    "aPartOf": "A Part of"
+}
