update terms files

--- a/i18n/en/components/pages/taxonomy/gbf/term-details.json
+++ b/i18n/en/components/pages/taxonomy/gbf/term-details.json
@@ -1,1 +1,8 @@
-{}
+{
+    "code": "Code",
+    "title": "Title",
+    "shortTitle": "Short title",
+    "description": "Description",
+    "longDescription": "Long Description",
+    "linkedWith": "Linked with"
+}
